# football_pool

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
file_structure/: generate_file_structure _rev_2_1.py  generate_file_structure _rev_2_2.py
file_structure/chat_gpt/: program_chat_gpt.txt
src/football_pool/: __init__.py  sample_code.py
src/football_pool_picker/: __init__.py  app.py  config.py  logging_utils.py
src/football_pool_picker/data/: team_aliases.toml
src/football_pool_picker/export/: __init__.py  picksheet.py
src/football_pool_picker/ingestion/: __init__.py  csv_loader.py
src/football_pool_picker/odds/: __init__.py  consensus.py  converters.py  devig.py
src/football_pool_picker/ranking/: __init__.py  ranker.py  tiebreakers.py
src/football_pool_picker/ui/: __init__.py
tests/: test_smoke.py
